2000-04-12  John Jannotti  <jj@lcs.mit.edu>

	* tnt.el (tnt-blist-to-buffer): Simplify filter interface so
 	filters need not add spaces.
 	(tnt-build-buddy-buffer): Remove extra spaces in filter.
	(tnt-blist-to-buffer): Use concat instead of format so string
	properties inserted by filter are copied.
	(tnt-build-buddy-buffer): Make buddies mouse highlighted to
	reflect the fact that they are clickable.
	(tnt-buddy-list-mode-map): Make it so that mouse-2 doesn't also
	try to yank when in buddy-list-mode.

2000-04-12  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-test-for-buggy-idle): added.  tests emacs for proper
	idle timer handling.

2000-04-12  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-buddy-edit-buffer): fixed typo.  with-current-buffer
	was typed as with-curren-buffer.

2000-04-12  John Jannotti  <jj@lcs.mit.edu>

	* tnt.el: use with-current-buffer instead of a save-excursion plus 
	a set-buffer when possible.
	(tnt-set-buddy-status): if a buddy goes online/offline and you
	already have an im-buffer for that buddy, note it in the buffer.

2000-04-11  John Jannotti  <jj@lcs.mit.edu>

	* tnt.el (tnt-im-mode, tnt-chat-mode): Be explicit about turning
 	on autofill
	(tnt-switch-to-buffer): Just make this switch buffers instead of
	returning a function to call to switch buffers.

	* toc.el (toc-chat-join): Force exchange to be 4 as per PROTOCOL.

	* tnt.el (tnt-open): Use add-hook instead of setq.
	(tnt-handle-sign-on): Just use toc-keepalive, get rid of
 	tnt-keepalive.
	(tnt-get-away-msg): Removed extraneous message (we called message
 	twice in a row).

	* toc.el (toc-handle-opened, toc-handle-closed,
 	toc-handle-receive): Use toc-run-hooks instead of apply.
	(toc-run-hooks): Added.  Using this allows multiple "subscribers"
	to the various toc "events".
	(toc-run-hooks): Use mapcar not mapc.  Creates more garbage, but
	Emacs doesn't have mapc.

	* tnt.el (tnt-shutdown): Changed name from tnt-buddy-shutdown as