@@ -1,3 +1,8 @@
+2000-04-12  Neil ''Fred'' Picciotto  <fred@guido.derf.net>
+
+	* tnt.el (tnt-append-message): insert time stamp whether or not
+	this is a message from a user.
+
 2000-04-12  John Jannotti  <jj@lcs.mit.edu>
 
 	* tnt.el (tnt-blist-to-buffer): Simplify filter interface so
